[package]
name = "pinguiny"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["dynamic_linking"] }
avian2d = "0.7"
leafwing-input-manager = "0.21.0"
serde = { version = "1.0.229", features = ["derive"] }
ron = "0.12.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
